# Faculdade

./: README.md
2016.2/Lab-Web/: README.md  Roteiro.txt  index.html  package.json
2016.2/Lab-Web/_arquivos/: pesquisa-de-aluno.component.html  pesquisa-de-aluno.component.js  pesquisa-de-aluno.component.js.map  pesquisa-de-aluno.component.ts  pesquisa-de-aluno.service.js  pesquisa-de-aluno.service.js.map  pesquisa-de-aluno.service.ts
2016.2/Lab-Web/app/: aluno.js  aluno.js.map  aluno.service.js  aluno.service.js.map  aluno.service.ts  aluno.ts  app.component.js  app.component.js.map  app.component.ts  app.module.js  app.module.js.map  app.module.ts  app.routing.js  app.routing.js.map  app.routing.ts  exibir-aluno.component.js  exibir-aluno.component.js.map  exibir-aluno.component.ts  exibir-alunos.component.js  exibir-alunos.component.js.map  exibir-alunos.component.ts  home.component.js  home.component.js.map  home.component.ts  in-memory-data.service.js  in-memory-data.service.js.map  in-memory-data.service.ts  main.js.map  main.ts  pesquisa-de-aluno.component.js  pesquisa-de-aluno.component.js.map  pesquisa-de-aluno.component.ts  pesquisa-de-aluno.service.js  pesquisa-de-aluno.service.js.map  pesquisa-de-aluno.service.ts  profissao.js  profissao.js.map  profissao.ts  quemsomos.component.js  quemsomos.component.js.map  (+4 more)
2017.1/Arquitetura-de-Computadores/: trabalho02.asm  trabalho03.asm  trabalho04.asm
2017.1/Estrutura-de-Dados-I/: p2-exercises.c
2017.1/Machine-Learning/T01/: Homework01.ipynb
2017.2/Estrutura-de-Dados-II/T05-Arvore-B/: CMakeLists.txt  arvore_b.c
(+122 files in other folders)
